--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@
 }
 @layer components {
   .content{
-    @apply min-h-screen container pb-12 pt-40 flex flex-col gap-24 justify-around lg:flex-row items-center
+    @apply min-h-screen container pb-12 max-lg:pt-32 pt-40 flex flex-col gap-24 justify-around lg:flex-row items-center
   }
   .header {
     @apply z-50 absolute top-0 left-0 py-10 md:py-0 lg:py-10 w-full flex justify-between items-center px-[1rem]
